@@ -7,29 +7,27 @@ libraries = ""
 flags += " -g "
 ocamldebug_script = "${test_source_directory}/input_script"
 
-* skip
-reason = "ocamldebug is broken (#34)"
-** debugger
-*** shared-libraries
-**** setup-ocamlc.byte-build-env
-***** ocamlc.byte
+* debugger
+** shared-libraries
+*** setup-ocamlc.byte-build-env
+**** ocamlc.byte
 module = "host.ml"
-****** ocamlc.byte
+***** ocamlc.byte
 module = "plugin.ml"
-******* ocamlc.byte
+****** ocamlc.byte
 module = ""
 all_modules = "host.cmo"
 program = "${test_build_directory}/host.byte"
 libraries = "dynlink"
 
-******** run
+******* run
 output = "host.output"
-********* check-program-output
+******** check-program-output
 reference = "${test_source_directory}/host.reference"
 
-********* ocamldebug
+******** ocamldebug
 output = "host.debug.output"
-********** check-program-output
+********* check-program-output
 reference = "${test_source_directory}/host.debug.reference"
 
 *)
