@@ -3,17 +3,15 @@ flags += " -g "
 ocamldebug_script = "${test_source_directory}/input_script"
 readonly_files = "printer.ml"
 include debugger
-* skip
-reason = "ocamldebug is broken (#34)"
-** debugger
-*** shared-libraries
-**** setup-ocamlc.byte-build-env
-***** ocamlc.byte
+* debugger
+** shared-libraries
+*** setup-ocamlc.byte-build-env
+**** ocamlc.byte
 module = "printer.ml"
-***** ocamlc.byte
-****** check-ocamlc.byte-output
-******* ocamldebug
-******** check-program-output
+**** ocamlc.byte
+***** check-ocamlc.byte-output
+****** ocamldebug
+******* check-program-output
 *)
 
 let f x =
